-- v?? --
* updated AtExit's code so that unregistering dynamic objects (dlclose() call) that registered to AtExit is will be possible.
* added Plugins namespace for handling plugins in external *.so files.
* few typos fixed.
* minor code/style fixes.

-- v0.7.1 --
* fixed issue with convertion from const in SharedPtrNotNULL<>.
* fixed issue with comparison operators in SharedPtrNotNULL<> - now only operators available in boost::shared_ptr<> are available.

-- v0.7.0 --
* OneInstanceAtOnce - guard class that ensures that only one instance of a given object is present at a given time in system.
* ignore<>() - helper that prevents warnings about unused variable (ex.: that is needed only in debug).
* fixed SharedPtrNotNULL API to have explicit back-to-shared_ptr<> convertion method.
* GlobalInit<> - secure, thread safe initializer of the libraries that need such before usage.
* SharedPtrNotNULL<> can now implicitly convert between pointers to derived -> base classes and non-const -> const pointers.

-- v0.6.0 --
* fixed remarks on intel's toolchain.
* added real-time timer showing time elapsed since its start.
* implemented helper for registration handlers for signals.
* file opening uses now O_CLOEXEC flag by default.
* implemented SharedPtrNotNULL template - boost::shred_ptr<> equivalent, that ensures that pointer is NOT NULL.
* implemented ScopedPtrCustom template - boost::scoped_ptr<> equivalent, that allows user-provided function to free pointer.
* likely.hpp implements compiler huristics for branches.
* added FunctionName.hpp with macro wrapping and setting SYSTEM_FUNCTION_NAME macro to return pretty-function name, when possible and funciton name as a fallback.
* added location inforamtion for all exception classes (new c-tor has been added).
* exceptions can now return their name (via RTTI) with getTypeName().
* fixed Backtrace's tests (tail-recursion on newer gcc versions).
* fixed race condition when initializing Singleton from multiple threads.