@@ -1,4 +1,5 @@
 System/*.?pp
+System/detail/*.?pp
 System/Math/*.?pp
 System/Threads/*.?pp
 System/Plugins/*.?pp
